<resources>
    <string name="app_name">Quics App</string>
    <string name="brand_slogan">World of tasty food!</string>
    <string name="home_drawer_open">open</string>
    <string name="home_drawer_close">close</string>
    <string name="home_greeting">Hi,Elizabeth!</string>
    <string name="home_search_here_hint">Search here&#8230;</string>
    <string name="home_categories_label">Categories</string>
    <string name="home_most_popular_label">Most popular</string>
    <string name="home_offer_label">Today\'s offer</string>
    <string name="home_recently_viewed_label">Recently viewed</string>
    <string name="home_scratch_win_label">Scratch &amp; win</string>
    <string name="home_see_all_label">See all</string>
    <string name="home_best_restaurants_label">Best restaurants</string>
    <string name="home_best_restaurant_distance">30 minutes</string>
    <string name="home_best_restaurant_name">Eats Meets West</string>
    <string name="home_best_restaurant_rating">5</string>
    <string name="home_best_restaurant_rating_count">(25)</string>
    <string name="home_best_restaurant_price_range_label">Price range:</string>
    <string name="home_best_restaurant_price_range">$10.00 &#8211; 59.99</string>
    <string name="login_screen_toolbar_title">Login</string>
    <string name="login_screen_heading">Login</string>
    <string name="login_screen_info">Hey, Enter your account credentials too get log in to your account.</string>
    <string name="login_email_label">Email</string>
    <string name="login_email_hint">Enter your email address</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_remember_me_label">Remember me</string>
    <string name="login_question_one">Forgot password?</string>
    <string name="login_button_label">Login</string>
    <string name="login_or_label">Or</string>
    <string name="login_facebook_label">Facebook</string>
    <string name="login_twitter_label">Twitter</string>
    <string name="login_dribble_label">Dribble</string>
    <string name="login_question_two">Don\'t have an account?</string>
    <string name="login_create_here_label">Create here</string>
    <string name="register_screen_toolbar_title">Register</string>
    <string name="register_screen_heading">Register</string>
    <string name="register_screen_info">Hey, Enter your details to create a brand new customer account.</string>
    <string name="register_name_label">Name</string>
    <string name="register_name_hint">Enter your name</string>
    <string name="register_email_label">Email</string>
    <string name="register_email_hint">Enter your email address</string>
    <string name="register_phone_label">Phone</string>
    <string name="register_phone_hint">Enter your phone number</string>
    <string name="register_log_me_in_label">Log me in</string>
    <string name="register_button_label">Register</string>
    <string name="register_question_bottom">Already have an account?</string>
    <string name="register_login_here_label">Login here</string>
    <string name="change_password_toolbar_title">Change password</string>
    <string name="change_password_heading">Change password</string>
    <string name="change_password_info">Hey, Change your password to secure your account.</string>
    <string name="change_password_current_password_label">Current Password</string>
    <string name="change_password_current_password_hint">Enter your current password</string>
    <string name="change_password_new_password_label">New Password</string>
    <string name="change_password_new_password_hint">Enter your new password</string>
    <string name="change_password_confirm_new_password_label">Confirm New Password</string>
    <string name="change_password_confirm_new_password_hint">Confirm your new password</string>
    <string name="change_password_button_label">Change Password</string>
    <string name="no_internet_toolbar_title">No Internet</string>
    <string name="no_internet_label">No Internet!</string>
    <string name="no_internet_info">Seems, you have no internet connection.\nPlease check your Wi-Fi settings.</string>
    <string name="no_data_toolbar_title">No Data</string>
    <string name="no_data_label">No Data!</string>
    <string name="no_data_info">Seems, there is no data found for this screen.\nPlease be patient.</string>
    <string name="no_notifications_toolbar_title">No Notifications</string>
    <string name="no_notifications_label">No Notifications!</string>
    <string name="no_notifications_info">Seems, there are no notifications available.\nPlease be patient.</string>
    <string name="page_not_found_toolbar_title">404 Page Not Found</string>
    <string name="page_not_found_label">Page Not Found!</string>
    <string name="page_not_found_info">Seems, the page you are looking for\ndoes not exist.</string>
    <string name="my_profile_toolbar_title">My Profile</string>
    <string name="my_profile_full_name">Jonathan Doe</string>
    <string name="my_profile_email">jonathan@yahoo.com</string>
    <string name="my_profile_edit_profile_label">Edit Profile</string>
    <string name="my_profile_app_settings_label">Settings</string>
    <string name="my_profile_my_orders_label">My Orders</string>
    <string name="my_profile_my_wishlist_label">My Wishlist</string>
    <string name="my_profile_my_wallet_label">My Wallet</string>
    <string name="my_profile_change_language_label">Change Language</string>
    <string name="my_profile_coupons_label">Coupons</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="settings_account_label">Account</string>
    <string name="settings_edit_profile_label">Edit Profile</string>
    <string name="settings_change_password_label">Change Password</string>
    <string name="settings_messaging_label">Messaging</string>
    <string name="settings_notification_settings_label">Notification Settings</string>
    <string name="settings_email_label">Email</string>
    <string name="settings_sms_and_alert_label">SMS &amp; Alert</string>
    <string name="settings_appearance_label">Appearance</string>
    <string name="settings_change_theme_label">Change Theme</string>
    <string name="settings_other_label">Other</string>
    <string name="settings_change_language_label">Change Language</string>
    <string name="settings_currency_label">Currency</string>
    <string name="settings_choose_theme_label">Choose Theme</string>
    <string name="my_wallet_toolbar_title">My Wallet</string>
    <string name="my_wallet_label">My Wallet</string>
    <string name="my_wallet_your_current_balance_label">Your Current Balance</string>
    <string name="my_wallet_add_balance_label">Add Balance</string>
    <string name="my_wallet_current_balance_large">$1750</string>
    <string name="my_wallet_current_balance_small">.75</string>
    <string name="my_wallet_send_label">Send</string>
    <string name="my_wallet_receive_label">Receive</string>
    <string name="my_wallet_shop_label">Shop</string>
    <string name="my_wallet_swap_label">Swap</string>
    <string name="my_wallet_recent_transactions_label">Recent Transactions</string>
    <string name="policy_toolbar_title">Policy Details</string>
    <string name="policy_last_update_date">Last updated on February 10, 2023</string>
    <string name="policy_point_1">Policy details</string>
    <string name="policy_point_1_details">We value the trust you place in us and recognize the importance of secure transactions and information privacy. This Privacy Policy describes how quics Furniture Internet Private Limited and its affiliates (collectively quics, we, our, us”) collect, use, share or otherwise process your personal information through quics Furniture website www.quics.com, its mobile application, and m-site (hereinafter referred to as the “Platform”).\n\nWhile you may be able to browse certain sections of the Platform without registering with us, however, please note we do not offer any product/service under this Platform outside India. By visiting this Platform, providing your information or availing out product/service, you expressly agree to be bound by the terms and conditions of this Privacy Policy, the Terms of Use and the applicable service/product terms and conditions, and agree to be governed by the laws of India including but not limited to the laws applicable to data protection and privacy. If you do not agree please do not use or access our Platform.</string>
    <string name="policy_point_2">Collection of Your Information</string>
    <string name="policy_point_2_details">When you use our Platform, we collect and store your information which is provided by you from time to time. In general, you can browse the Platform without telling us who you are or revealing any personal information about yourself. Once you give us your personal information, you are not anonymous to us. Where possible, we indicate which fields are required and which fields are optional. You always have the option to not provide information by choosing not to use a particular service, product or feature on the Platform.\n\nWe may track your buying behaviour, preferences, and other information that you choose to provide on our Platform. We use this information to do internal research on our users\' demographics, interests, and behaviour to better understand, protect and serve our users. This information is compiled and analysed on an aggregated basis. This information may include the URL that you just came from (whether this URL is on our Platform or not), which URL you next go to (whether this URL is on our Platform or not), your computer browser information, and your IP address.</string>
    <string name="list_view_products_toolbar_title">List View Products</string>
    <string name="item_list_view_product_title">Chicken hamburger with chicken</string>
    <string name="item_list_view_product_rating">5.0 out of 5</string>
    <string name="item_list_view_product_rating_count">(31)</string>
    <string name="item_list_view_product_original_price">$12.00</string>
    <string name="item_list_view_product_selling_price">$10.00</string>
    <string name="notifications_toolbar_title">Notifications</string>
    <string name="item_notification_title">Order delivered!</string>
    <string name="item_notification_age">2 minutes ago</string>
    <string name="item_notification_message">Hi, your order containing veg burger has been\ndelivered a few minutes ago by one of our.</string>
    <string name="languages_toolbar_title">Change Language</string>
    <string name="item_language_title">English</string>
    <string name="item_recent_transactions_title">Netflix</string>
    <string name="item_recent_transactions_date">31 Jan, 2023</string>
    <string name="item_recent_transactions_amount">-13.75</string>
    <string name="item_recent_transactions_type">Subscription</string>
    <string name="grid_view_products_toolbar_title">Grid View Products</string>
    <string name="item_grid_view_product_title">Chicken\nhamburger with chicken</string>
    <string name="item_grid_view_product_rating">5.0</string>
    <string name="item_grid_view_product_rating_count">(31)</string>
    <string name="splash_brand_tagline"></string>
    <string name="splash_app_info">Admin E-Business</string>
    <string name="image_content_description">Image content description</string>
    <string name="item_home_drawer_nav_1">Home</string>
    <string name="item_home_drawer_nav_2">Support &amp; Help</string>
    <string name="item_home_drawer_nav_4">My Chats</string>
    <string name="item_home_drawer_nav_5">404 Page Not Found</string>
    <string name="item_home_drawer_nav_6">No Internet</string>
    <string name="item_home_drawer_nav_7">FAQ\'s</string>
    <string name="item_home_drawer_nav_8">Login</string>
    <string name="my_profile_exit">exit</string>
</resources>