<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:checkable="true"
            android:icon="@drawable/ic_home_orange"
            android:title="@string/item_home_drawer_nav_1" />
        <item
            android:id="@+id/support"
            android:checkable="false"
            android:icon="@drawable/ic_question_mark_orange"
            android:title="@string/item_home_drawer_nav_2" />



        <item
            android:id="@+id/chats"
            android:checkable="false"
            android:icon="@drawable/ic_chat_orange"
            android:title="@string/item_home_drawer_nav_4" />

        <item
            android:id="@+id/not_found"
            android:checkable="false"
            android:icon="@drawable/ic_alert_triangle_orange"
            android:title="@string/item_home_drawer_nav_5" />

        <item
            android:id="@+id/no_internet"
            android:checkable="false"
            android:icon="@drawable/ic_wifi"
            android:title="@string/item_home_drawer_nav_6" />

        <item
            android:id="@+id/faqs"
            android:checkable="false"
            android:icon="@drawable/ic_question_mark_orange"
            android:title="@string/item_home_drawer_nav_7" />

        <item
            android:id="@+id/login"
            android:checkable="false"
            android:visible="false"
            android:icon="@drawable/ic_log_in_orange"
            android:title="@string/item_home_drawer_nav_8" />
        <item
            android:id="@+id/logOut"
            android:checkable="true"
            android:visible="true"
            android:icon="@drawable/ic_log_out_orange"
            android:title="@string/my_profile_exit" />
    </group>
</menu>