<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_header_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:scaleType="fitXY"
       android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_content_description"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_logo"
        android:layout_width="127dp"
        android:layout_height="137dp"
        android:layout_marginStart="@dimen/_15sdp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/_25sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_header_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_header_background" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_logo"
        android:layout_width="135dp"
        android:layout_height="154dp"
        android:src="@drawable/logoquics"
        app:layout_constraintBottom_toBottomOf="@+id/card_logo"
        app:layout_constraintEnd_toEndOf="@+id/card_logo"
        app:layout_constraintStart_toStartOf="@+id/card_logo"
        app:layout_constraintTop_toTopOf="@+id/card_logo" />

    <TextView
        android:id="@+id/text_brand_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/app_name"
        android:textColor="@color/textHighContrast"
        android:textSize="@dimen/_16ssp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/text_brand_slogan"
        app:layout_constraintStart_toEndOf="@+id/card_logo"
        app:layout_constraintTop_toTopOf="@+id/card_logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_brand_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/splash_app_info"
        android:textColor="@color/textHighContrast"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/card_logo"
        app:layout_constraintStart_toStartOf="@+id/text_brand_name"
        app:layout_constraintTop_toBottomOf="@+id/text_brand_name" />

</androidx.constraintlayout.widget.ConstraintLayout>